--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <meta lang="fr-FR" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nina Carducci site de photographie" />
     <meta
@@ -9,8 +9,8 @@
       content="Nina Carducci  photographie Bordeaux événementiel "
     />
     <meta name="author" content="Matthieu L" />
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer />
+    <link rel="stylesheet" href="./assets/style.css" defer />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,12 +21,14 @@
     <title>
       Nina Carducci, Photographe portraits & événementiel à Bordeaux
     </title>
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
+      defer
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
   </head>
@@ -45,8 +47,8 @@
                 class="social-link"
                 href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
                 target="_blank"
-                ><img src="assets/images/instagram.webp" alt=""
-              /></a>
+                ><img src="assets/images/instagram.webp" alt="" />Instagram</a
+              >
             </li>
           </ul>
         </div>
@@ -84,21 +86,24 @@
               <img
                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
                 class="d-block w-100"
-                alt="..."
+                alt="Photo d'un homme d'affaire marchant a l'extérieur"
+                loading="lazy"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
                 class="d-block w-100"
-                alt="..."
+                alt="Photo d'une foule vue de face"
+                loading="lazy"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
                 class="d-block w-100"
-                alt="..."
+                alt="Photo d'un couple de marié"
+                loading="lazy"
               />
             </div>
           </div>
@@ -160,7 +165,7 @@
               data-gallery-tag="Concert"
               class="gallery-item"
               src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-              aria-keyshortcuts="Photo d'un concert  en intérieur"
+              alt="Photo d'un concert  en intérieur"
             />
             <img
               data-gallery-tag="Entreprises"
@@ -294,11 +299,11 @@
               heures
             </p>
             <form action="" method="post">
-              <label>Nom</label>
+              <label for="nom">Nom</label>
               <input type="text" name="nom" id="nom" />
-              <label>Email</label>
+              <label for="email">Email</label>
               <input type="email" name="email" id="email" />
-              <label>Message</label>
+              <label for="message">Message</label>
               <textarea
                 name="message"
                 id="message"
@@ -309,7 +314,10 @@
             </form>
           </div>
           <div class="picture right">
-            <img src="./assets/images/camera.webp" />
+            <img
+              src="./assets/images/camera.webp"
+              alt="Appareil photo en gros plan"
+            />
           </div>
         </div>
       </footer>
