--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
                 class="d-block w-100"
                 alt="Photo d'un homme d'affaire marchant a l'extérieur"
-                loading="lazy"
               />
             </div>
             <div class="carousel-item">
@@ -134,6 +133,8 @@
           <img
             src="./assets/images/nina.webp"
             alt="un portrait de Nina Carducci"
+            width="400"
+            height="400"
           />
         </div>
         <div id="about-me">
