--- a/index.html
+++ b/index.html
@@ -3,21 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Nina Carducci site de photographie" />
+    <meta
+      name="description"
+      content="Nina Carducci - site de photographie événementiel"
+    />
     <meta
       name="keywords"
-      content="Nina Carducci  photographie Bordeaux événementiel "
+      content="Nina Carducci  photographie Bordeaux événementiel photo "
     />
     <meta name="author" content="Matthieu L" />
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer />
-    <link rel="stylesheet" href="./assets/style.css" defer />
+    <meta name="language" content="fr-FR" />
+    <meta property="og:site_name" content="Nina Carducci" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://github.com/MatthieuLa/Projet8" />
+    <meta
+      property="og:title"
+      content="Nina Carducci - site de photographie événementiel"
+    />
+    <meta
+      property="og:description"
+      content="Ninca Carducci, photographe événementiel à Bordeaux. Découvrez mes services et mon portfolio"
+    />
+    <meta property="og:image" content="./assets/images/nina.webp" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
+
     <title>
       Nina Carducci, Photographe portraits & événementiel à Bordeaux
     </title>
@@ -31,6 +47,63 @@
 
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Nina Carducci",
+        "image": "https://example.com/assets/images/nina.webp",
+        "description": "Nina Carducci, photographe événementiel à Bordeaux. Découvrez mes services et mon portfolio.",
+        "url": "https://github.com/MatthieuLa/Projet8",
+        "telephone": "+33 5 56 67 78 89",
+        "email": "contact@nina-carducci.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "addressRegion": "Nouvelle-Aquitaine",
+          "postalCode": "33200",
+          "addressCountry": "FR"
+        },
+        "sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
+        "priceRange": "$$$",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "areaServed": {
+          "@type": "Place",
+          "name": "Nouvelle-Aquitaine"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 44.8378,
+          "longitude": -0.5792
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "27"
+        },
+        "service": [
+          {
+            "@type": "Service",
+            "name": "Shooting photo",
+            "description": "Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos.",
+            "priceRange": "350€/demi journée"
+          },
+          {
+            "@type": "Service",
+            "name": "Retouches",
+            "description": "Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications.",
+            "priceRange": "50€/photo"
+          },
+          {
+            "@type": "Service",
+            "name": "Album photos",
+            "description": "Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé.",
+            "priceRange": "400€ album A4"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -128,169 +201,179 @@
       </div>
     </header>
     <main>
-      <div id="about">
-        <div class="picture left">
-          <img
-            src="./assets/images/nina.webp"
-            alt="un portrait de Nina Carducci"
-            width="400"
-            height="400"
-          />
-        </div>
-        <div id="about-me">
-          <h2 class="about-me__title">A propos de moi</h2>
-          <h3 class="about-me__introduction">
-            Devenir photographe était pour moi une évidence. Comme si j’y étais
-            prédestiné. Saisir un moment, une émotion, une situation, un
-            endroit, une lumière et les rendre immortels, voilà ce qui me fait
-            vibrer.
-          </h3>
-          <p>
-            Nous passons notre vie à chercher le bonheur, et lorsque nous y
-            touchons, nous n’avons qu’une envie : le figer au travers de
-            photographies pour le savourer avec les personnes qui sont
-            importantes à nos yeux, ou le partager au plus grand nombre. C’est
-            ce que je vous propose : saisir ces merveilleux moments au travers
-            de mon regard, mon approche, ma technique. Rendre ces moments
-            immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
-            de la tendresse et de lumière à chaque fois que vous poserez les
-            yeux sur vos photos.
-          </p>
-        </div>
-      </div>
-      <div id="gallery">
-        <h2 class="title">Portfolio</h2>
-        <div class="container py-3">
-          <div class="gallery" style="display: none">
+      <section>
+        <div id="about">
+          <div class="picture left">
             <img
-              data-gallery-tag="Concert"
-              class="gallery-item"
-              src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-              alt="Photo d'un concert  en intérieur"
-            />
-            <img
-              data-gallery-tag="Entreprises"
-              class="gallery-item"
-              src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-              alt="Photo d'un employé d'entreprise"
-            />
-            <img
-              data-gallery-tag="Entreprises"
-              class="gallery-item"
-              src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-              alt="photo d'employés d'entreprise"
-            />
-            <img
-              data-gallery-tag="Mariages"
-              class="gallery-item"
-              src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-              alt="photo prise lors d'un mariage"
-            />
-            <img
-              data-gallery-tag="Portrait"
-              class="gallery-item"
-              src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-              alt="photo d'un portrait masculin"
-            />
-            <img
-              data-gallery-tag="Mariages"
-              class="gallery-item"
-              src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-              alt="photo prise lors d'un mariage"
-            />
-            <img
-              data-gallery-tag="Portrait"
-              class="gallery-item"
-              src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-              alt="photo d'un portrait féminin"
-            />
-            <img
-              data-gallery-tag="Concert"
-              class="gallery-item"
-              src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-              alt="photo d'un concert en extérieur"
-            />
-            <img
-              data-gallery-tag="Entreprises"
-              class="gallery-item"
-              src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-              alt="photo d'une employée d'entreprise"
+              src="./assets/images/nina.webp"
+              alt="un portrait de Nina Carducci"
+              width="400"
+              height="400"
             />
           </div>
+          <div id="about-me">
+            <h2 class="about-me__title">A propos de moi</h2>
+            <h3 class="about-me__introduction">
+              Devenir photographe était pour moi une évidence. Comme si j’y
+              étais prédestiné. Saisir un moment, une émotion, une situation, un
+              endroit, une lumière et les rendre immortels, voilà ce qui me fait
+              vibrer.
+            </h3>
+            <p>
+              Nous passons notre vie à chercher le bonheur, et lorsque nous y
+              touchons, nous n’avons qu’une envie : le figer au travers de
+              photographies pour le savourer avec les personnes qui sont
+              importantes à nos yeux, ou le partager au plus grand nombre. C’est
+              ce que je vous propose : saisir ces merveilleux moments au travers
+              de mon regard, mon approche, ma technique. Rendre ces moments
+              immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
+              de la tendresse et de lumière à chaque fois que vous poserez les
+              yeux sur vos photos.
+            </p>
+          </div>
         </div>
+      </section>
+      <section>
+        <div id="gallery">
+          <h2 class="title">Portfolio</h2>
+          <div class="container py-3">
+            <div class="gallery" style="display: none">
+              <img
+                data-gallery-tag="Concert"
+                class="gallery-item"
+                src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+                alt="Photo d'un concert  en intérieur"
+              />
+              <img
+                data-gallery-tag="Entreprises"
+                class="gallery-item"
+                src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+                alt="Photo d'un employé d'entreprise"
+              />
+              <img
+                data-gallery-tag="Entreprises"
+                class="gallery-item"
+                src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+                alt="photo d'employés d'entreprise"
+              />
+              <img
+                data-gallery-tag="Mariages"
+                class="gallery-item"
+                src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+                alt="photo prise lors d'un mariage"
+              />
+              <img
+                data-gallery-tag="Portrait"
+                class="gallery-item"
+                src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+                alt="photo d'un portrait masculin"
+              />
+              <img
+                data-gallery-tag="Mariages"
+                class="gallery-item"
+                src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+                alt="photo prise lors d'un mariage"
+              />
+              <img
+                data-gallery-tag="Portrait"
+                class="gallery-item"
+                src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+                alt="photo d'un portrait féminin"
+              />
+              <img
+                data-gallery-tag="Concert"
+                class="gallery-item"
+                src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+                alt="photo d'un concert en extérieur"
+              />
+              <img
+                data-gallery-tag="Entreprises"
+                class="gallery-item"
+                src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+                alt="photo d'une employée d'entreprise"
+              />
+            </div>
+          </div>
+
+          <div class="quote">
+            <figure>
+              <blockquote>
+                <h2 class="quote__text">
+                  Un portrait n’est pas une ressemblance. Dès lors qu’une
+                  émotion ou qu’un fait est traduit en photo, il cesse d’être un
+                  fait pour devenir une opinion. L’inexactitude n’existe pas en
+                  photographie. Toutes les photos sont exactes. Aucune d’elles
+                  n’est la vérité.
+                </h2>
+              </blockquote>
+              <figcaption class="quote__author">- Richard Avedon</figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div id="services">
+          <h2 class="title">Mes services</h2>
+          <div class="container">
+            <div class="service">
+              <div class="service__description">
+                <h3>Shooting photo</h3>
+                <p>
+                  Pour capturer vos moments les plus précieux et garder un
+                  souvenir impérissable. Je me déplace en Île-de-France pour
+                  réaliser vos photos
+                </p>
+              </div>
+              <div class="service__price">
+                <h4>350€/demi journée</h4>
+                <span>Matériel, déplacement inclus</span>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service__description">
+                <h3>Retouches</h3>
+                <p>
+                  Vous souhaitez retoucher vos photos pour un résultat
+                  professionnel ? Bénéficier d’un rendu optimal pour vos
+                  publications
+                </p>
+              </div>
+              <div class="service__price">
+                <h4>50€/photo</h4>
+                <span>2 AR par photo</span>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service__description">
+                <h3>Album photos</h3>
+                <p>
+                  Partagez avec vos proches et vos clients les photos des
+                  moments partagés ensemble à travers un album photo
+                  personnalisé
+                </p>
+              </div>
+              <div class="service__price">
+                <h4>400€ album A4</h4>
+                <span>30 pages recto/verso</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
         <div class="quote">
           <figure>
             <blockquote>
-              <h2 class="quote__text">
-                Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
-                ou qu’un fait est traduit en photo, il cesse d’être un fait pour
-                devenir une opinion. L’inexactitude n’existe pas en
-                photographie. Toutes les photos sont exactes. Aucune d’elles
-                n’est la vérité.
-              </h2>
+              <h3 class="quote__text">
+                De manière inconsciente, je crois, je guette un regard, une
+                expression, des traits ou une nostalgie capable de résumer ou
+                plus exactement de révéler une vie
+              </h3>
             </blockquote>
             <figcaption class="quote__author">- Richard Avedon</figcaption>
           </figure>
         </div>
-      </div>
-      <div id="services">
-        <h2 class="title">Mes services</h2>
-        <div class="container">
-          <div class="service">
-            <div class="service__description">
-              <h3>Shooting photo</h3>
-              <p>
-                Pour capturer vos moments les plus précieux et garder un
-                souvenir impérissable. Je me déplace en Île-de-France pour
-                réaliser vos photos
-              </p>
-            </div>
-            <div class="service__price">
-              <h4>350€/demi journée</h4>
-              <span>Matériel, déplacement inclus</span>
-            </div>
-          </div>
-          <div class="service">
-            <div class="service__description">
-              <h3>Retouches</h3>
-              <p>
-                Vous souhaitez retoucher vos photos pour un résultat
-                professionnel ? Bénéficier d’un rendu optimal pour vos
-                publications
-              </p>
-            </div>
-            <div class="service__price">
-              <h4>50€/photo</h4>
-              <span>2 AR par photo</span>
-            </div>
-          </div>
-          <div class="service">
-            <div class="service__description">
-              <h3>Album photos</h3>
-              <p>
-                Partagez avec vos proches et vos clients les photos des moments
-                partagés ensemble à travers un album photo personnalisé
-              </p>
-            </div>
-            <div class="service__price">
-              <h4>400€ album A4</h4>
-              <span>30 pages recto/verso</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="quote">
-        <figure>
-          <blockquote>
-            <h3 class="quote__text">
-              De manière inconsciente, je crois, je guette un regard, une
-              expression, des traits ou une nostalgie capable de résumer ou plus
-              exactement de révéler une vie
-            </h3>
-          </blockquote>
-          <figcaption class="quote__author">- Richard Avedon</figcaption>
-        </figure>
-      </div>
+      </section>
       <footer id="contact">
         <div class="container">
           <div class="form-container">
@@ -299,7 +382,7 @@
               N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24
               heures
             </p>
-            <form action="" method="post">
+            <form action="#" method="post">
               <label for="nom">Nom</label>
               <input type="text" name="nom" id="nom" />
               <label for="email">Email</label>
@@ -318,6 +401,8 @@
             <img
               src="./assets/images/camera.webp"
               alt="Appareil photo en gros plan"
+              width="390"
+              height="390"
             />
           </div>
         </div>
