Changement du @type pour organization.

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
-
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "LocalBusiness",
+        "@type": "organization",
         "name": "Nina Carducci",
         "image": "https://example.com/assets/images/nina.webp",
         "description": "Nina Carducci, photographe événementiel à Bordeaux. Découvrez mes services et mon portfolio.",
