--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           "ratingValue": "4.8",
           "reviewCount": "27"
         },
-        "service": [
+        "makesOffer": [
           {
-            "@type": "Service",
+            "@type": "Offer",
             "name": "Shooting photo",
             "description": "Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos.",
             "offers": {
@@ -93,7 +93,7 @@
             }
           },
           {
-            "@type": "Service",
+            "@type": "Offer",
             "name": "Retouches",
             "description": "Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications.",
             "offers": {
@@ -103,7 +103,7 @@
             }
           },
           {
-            "@type": "Service",
+            "@type": "Offer",
             "name": "Album photos",
             "description": "Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé.",
             "offers": {
