--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             "name": "Shooting photo",
             "description": "Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos.",
             "offers": {
-              "@type": "Offer",
+              "@type": "Service",
               "price": "350",
               "priceCurrency": "EUR"
             }
@@ -109,6 +109,16 @@
             "offers": {
               "@type": "Offer",
               "price": "400",
+              "priceCurrency": "EUR"
+            }
+          },
+          {
+            "@type": "Offer",
+            "name": "Cours de photographie",
+            "description": "Apprenez les techniques de photographie professionnelle pour capturer des moments inoubliables par vous-même.",
+            "offers": {
+              "@type": "Service",
+              "price": "200",
               "priceCurrency": "EUR"
             }
           }
