modif width et height pour camera et nina webp ainsi qu'un style object-fit: cover

--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@
             <img
               src="./assets/images/nina.webp"
               alt="un portrait de Nina Carducci"
-              width="365"
+              width="400"
               height="400"
+              style="object-fit: cover"
             />
           </div>
           <div id="about-me">
@@ -403,8 +404,9 @@
             <img
               src="./assets/images/camera.webp"
               alt="Appareil photo en gros plan"
-              width="357"
+              width="390"
               height="390"
+              style="object-fit: cover"
             />
           </div>
         </div>
